# AramisApp

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/aramis/aramisapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AIDL demo.md  Android学习.md  cc.md
app/src/main/cpp/: my_native.cpp
app/src/main/java/ara/learn/: LearnListActivity.kt
app/src/main/java/ara/learn/activity/: IPCActivity.kt
app/src/main/java/ara/learn/animation/: AnimationFieldActivity.kt  AnimationFrameActivity.kt  AnimationLayoutActivity.kt  AnimationLayoutActivity2.kt  AnimationListActivity.kt  AnimationViewActivity.kt  Rotate3DAnimation.java
app/src/main/java/ara/learn/drawable/: DrawableAActivity.kt
app/src/main/java/ara/learn/handler/: MyHandler.java  MyMessage.java  MyMessageQueue.java  TestThreadLocalActivity.kt
app/src/main/java/ara/learn/ipc/: BookManagerImpl.java  IBookManagerMy.java  IPCListActivity.kt  User.java
app/src/main/java/ara/learn/remoteviews/: MyAppWidgetProvider.java  RemoteAActivity.java  RemoteBActivity.java  RemoteViewsActivity.kt
app/src/main/java/ara/learn/view/: TestView.java  ViewListActivity.kt  ViewTestActivity.kt
app/src/main/java/ara/learn/window/: WindowManagerTestActivity.kt
app/src/main/java/com/aramis/aramisapp/: AramisAppApplication.kt  MainActivity.kt
app/src/main/my/: my.md
app/src/main/res/anim/: layout_anim.xml  layout_anim_in.xml  translate_100.xml  view_alpha.xml  view_rotate.xml  view_scale.xml  view_set.xml  view_translate.xml
app/src/main/res/animator/: property_animator.xml
app/src/main/res/drawable/: animation_drawable.xml  back_setting_view.xml  background_rectangle.xml  button_continue.xml  cell_rectangle.xml  cell_rectangle_1024.xml  cell_rectangle_128.xml  cell_rectangle_16.xml  cell_rectangle_16384.xml  cell_rectangle_2.xml  cell_rectangle_2048.xml  cell_rectangle_256.xml  cell_rectangle_32.xml  cell_rectangle_32768.xml  cell_rectangle_4.xml  cell_rectangle_4096.xml  cell_rectangle_512.xml  cell_rectangle_64.xml  cell_rectangle_65536.xml  cell_rectangle_8.xml  cell_rectangle_8192.xml  drawable_9_test.xml  drawable_clip_test.xml  drawable_inset_test.xml  drawable_layer_test.xml  drawable_level_test.xml  drawable_scale_test.xml  drawable_test.xml  drawable_transition_test.xml  overlay_back.xml  score_back.xml  setting_layout_select.xml  setting_layout_unselect.xml
app/src/main/res/layout/: activity_anim_view.xml  activity_anim_view_layout.xml  activity_baidu_map.xml  activity_common_clock.xml  activity_drawable_a.xml  activity_filecache.xml  activity_ipc_socket.xml  activity_learn_ipc.xml  activity_learn_list.xml  activity_list.xml  activity_main.xml  activity_pendulum.xml  activity_remote_a.xml  activity_remote_b.xml  activity_remote_view.xml  activity_sudoku.xml  activity_view_test.xml  adapter_color_test.xml  list_ipc_socket.xml  notifi_remote.xml  remote_pass.xml  widget.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml
aramis-ffmpeg/: CMakeLists.txt  (+1 more)
aramis-ndk-cmake/: CMakeLists.txt  build.gradle  proguard-rules.pro  www.txt
aramis-ndk-cmake/src/main/: AndroidManifest.xml
aramis-ndk-cmake/src/main/cpp/: common.cpp  common.h  common_platform.cpp  fmod_use.cpp  hello_com_aramis_ndk_cmake_utils_AraFileSplitUtil.c  hello_com_aramis_ndk_cmake_utils_FileBsdiffUtil.c  play_sound.cpp
aramis-ndk-cmake/src/main/cpp/bsdiff-4.3/: bsdiff.c  bsdiff.h  bspatch.c
aramis-ndk-cmake/src/main/cpp/include/libfmod/: fmod.hpp
aramis-ndk-cmake/src/main/res/layout/: activity_file_split.xml  activity_fmod.xml  dialog_record.xml
aramis-ndk-cmake/src/main/res/values/: attrs.xml  strings.xml
aramis-opengl/: CMakeLists.txt  build.gradle
aramis-opengl/src/main/: AndroidManifest.xml
aramis-opengl/src/main/cpp/: native-lib.cpp
aramis-opengl/src/main/cpp/FaceAlignment/: CMakeLists.txt
aramis-opengl/src/main/res/drawable/: bg_bullet.xml  bg_dy_record.xml  bg_dy_speed_gray.xml  bg_dy_speed_white.xml  bullet.xml
aramis-opengl/src/main/res/layout/: activity_december_main.xml  activity_douyin.xml  activity_main_open.xml
aramis-opengl/src/main/res/raw/: base_frag.frag  base_vertex.vert  camera_frag.frag  camera_vertex.vert  my_fragment.frag  my_vertex.vert  test.vert
aramis-opengl/src/main/res/values/: strings.xml
(+213 files in other folders)
